--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,40 @@ bld/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
+
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+.idea
+
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+### macOS Patch ###
+# iCloud generated files
+*.icloud
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
